# mass-testing

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.deploy  Dockerfile.gpu  Dockerfile.mock  Makefile  README.md  docker-compose-gpu.yml  docker-compose.yml  run.sh  wrap_group.sh
.github/workflows/: docker.yaml
src/: main.rs
testnet_coordinator/: config.go  config.yaml.example  main.go  task_assign.go
testnet_coordinator/utilities/: README.md
testnet_coordinator/utilities/showprog/: main.go
